--- a/Worksheet/style.css
+++ b/Worksheet/style.css
@@ -11,12 +11,30 @@ body{
     font-size: 16px;
     font-weight: normal;
     font: normal 16px Arial, Helvetica, sans-serif;
-    line-height: 1.6cm;
+    line-height: 0.7cm;
+}
+a{
+    text-decoration: none;
+    color: #000;
+}
+a:hover{
+    color: red;
+}
+a:active{
+    color: green;
 }
 
 .container{
     width: 500px;
     margin:auto;
+}
+
+.button
+{
+    background-color:#333 ;
+    color: #fff;
+    padding: 10px 15px;
+    border: none;
 }
 
 .box-1 {
@@ -37,13 +55,63 @@ body{
     font-style: italic;
     text-decoration: underline;
     text-transform: uppercase;
-    letter-spacing: 0.2em;
-    word-spacing: 1em;
+    letter-spacing: 0.01em;
+    word-spacing: 0.5em;
 
 }
 
 .box-2{
     border: 3px dotted#ccc;
+    padding: 21px;
+
+}
+
+.categories{
+    border: 1px #ccc solid;
+    padding: 10px;
+    border-radius: 15px;
+
+
+}
+.categories h2
+{
+    text-align: center;
+
+}
+.categories ul{
+    padding: 0;
+    list-style: square;
+    list-style: none;
+    padding-left:20px ;
+}
+
+.categories li{
+    padding-bottom: 8px;
+    border-bottom: dotted 1px #333;
+    list-style-image:  url('TICK.png');
+}
+
+.my-form{
     padding: 20px;
     
+
+}
+.my-form .form-group{
+padding-bottom: 15px;
+}
+.my-form label{
+display: block;
+}
+.my-form input[type = "text"], .my-form textarea{
+    padding: 8px;
+    width: 90%;
+}
+
+.block{
+    float: left;
+    width: 33.3%;
+    border: 1px solid #ccc;
+    padding: 10px;
+    box-sizing: border-box;
+
 }
